# chromium-src-otcshare

./: .gitignore  DEPS
build_overrides/: webnn.gni
chrome/: BUILD.gn
chrome/browser/: about_flags.cc  flag-metadata.json  flag_descriptions.cc  flag_descriptions.h
chrome/installer/mini_installer/: chrome.release
components/ml/mojom/: BUILD.gn  webnn_context.mojom  webnn_graph.mojom  webnn_service.mojom
content/app/: BUILD.gn  DEPS  content_main_runner_impl.cc
content/browser/: BUILD.gn  browser_interface_binders.cc  builtin_service_manifests.cc  renderer_interface_binders.cc
content/browser/gpu/: gpu_process_host.cc
content/browser/ml/: ml_model_impl.cc  ml_model_impl.h  ml_model_impl_cros.cc  ml_model_impl_cros.h
content/browser/ml/webnn/: BUILD.gn  context_dml_impl.cc  context_dml_impl.h  fusion_operators.cc  fusion_operators.h  graph_dml_impl.cc  graph_dml_impl.h  mojo_server_dml_impl.cc  mojo_server_impl.cc  mojo_server_impl.h  webnn_service.cc  webnn_service.h  webnn_service_factory.cc  webnn_service_factory.h
content/browser/ml/webnn/dml/: DMLUtils.h  GraphDML.cc  GraphDML.h  context_dml_impl.cc  context_dml_impl.h  download_dml.py  graph_dml_impl.cc  graph_dml_impl.h  mojo_server_dml_impl.cc  mojo_server_dml_impl.h  utils_dml.h  webnn_service_dml_impl.cc  webnn_service_dml_impl.h
content/browser/service_manager/: service_manager_context.cc
content/child/: runtime_features.cc
content/gpu/: BUILD.gn  DEPS  gpu_child_thread_receiver_bindings.cc  gpu_service_factory.cc
content/public/app/: content_browser_manifest.cc
content/public/common/: content_features.cc  content_features.h
content/renderer/: renderer_blink_platform_impl.cc  renderer_blink_platform_impl.h  webgraphicscontext3d_provider_impl.cc  webgraphicscontext3d_provider_impl.h
gpu/: BUILD.gn
gpu/command_buffer/: build_webnn_cmd_buffer.py  webnn_cmd_buffer_functions.txt
gpu/command_buffer/client/: BUILD.gn  (+20 more)
services/ml/: BUILD.gn  compilation_delegate_dnnl.cc  compilation_delegate_mps.mm  execution_impl_bnns.h  execution_impl_bnns.mm  execution_impl_cl_dnn.cc  execution_impl_cl_dnn.h  execution_impl_dml.cc  execution_impl_dml.h  execution_impl_dnnl.cc  execution_impl_dnnl.h  execution_impl_mps.h  execution_impl_mps.mm  execution_impl_nn.cc  execution_impl_nn.h  model_impl_nn.cc
(+39 files in other folders)
