# Copyright (c) 2022 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [
    "ml_service.mojom",
    "web_platform_model.mojom",
  ]
  deps = [ "//mojo/public/mojom/base" ]

  # WebNN mojom
  sources += [
    "webnn_context.mojom",
    "webnn_graph.mojom",
    "webnn_service.mojom",
  ]
  deps += [ "//sandbox/policy/mojom" ]
}
